# kaggle-image-classification-cats_dogs

./: .gitignore  PROJECT_TEMPLATE.md  README.md  pyproject.toml
notebooks/: 00_eda.ipynb  01_baseline_train.ipynb  02_improve_train.ipynb  bad_files.json
scripts/: bootstrap.ps1
src/: __init__.py  cli.py  config.py  dataset.py  infer_datasets.py  model.py  predict.py  train.py  training.py  utils.py
